--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Treebook</title>
+  <title>Random Meet</title>
   <%= stylesheet_link_tag    "application", :media => "all" %>
   <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
@@ -11,9 +11,9 @@
 		<div class="navbar-inner">
 			<div class="container">
 				<% if user_signed_in? %>
-				<%= link_to "Treebook", activities_path, class: 'brand' %>
+				<%= link_to "Random Meet", activities_path, class: 'brand' %>
 				<% else %>
-				<%= link_to "Treebook", root_path, class: 'brand' %>
+				<%= link_to "Random Meet", root_path, class: 'brand' %>
 				<% end %>
 				<ul class="nav">
 					<li><%= link_to "All Statuses", feed_path %></li>
