--- a/app/views/layouts/hsc.html.erb
+++ b/app/views/layouts/hsc.html.erb
@@ -52,21 +52,19 @@
     </header>
     <!-- /header -->
 
-    <!--Slider-->
+        <!--Slider-->
     <section id="slide-show">
      <div id="slider" class="sl-slider-wrapper">
 
-        <!--Slider Items--><h2>..........are you ready to play?</h2>
-        <%= image_tag "chessbackup.png" %>   
+        <!--Slider Items-->    
         <div class="sl-slider">
             <!--Slider Item1-->
             <div class="sl-slide item1" data-orientation="horizontal" data-slice1-rotation="-25" data-slice2-rotation="-25" data-slice1-scale="2" data-slice2-scale="2">
                 <div class="sl-slide-inner">
                     <div class="container">
-                        <img class="pull-right">HELLO<%= image_tag "chess1.png" %>
+                        <img class="pull-right" <%= image_tag "chess1.png" %> alt="" />
                         <h2>High Speed Chess</h2>
                         <h3 class="gap">The new way to play</h3>
-                        <a class="btn btn-large btn-transparent" href="#">Learn More</a>
                     </div>
                 </div>
             </div>
@@ -76,11 +74,9 @@
             <div class="sl-slide item2" data-orientation="vertical" data-slice1-rotation="10" data-slice2-rotation="-15" data-slice1-scale="1.5" data-slice2-scale="1.5">
                 <div class="sl-slide-inner">
                     <div class="container">
-                        <img class="pull-right">
-                        <%= image_tag "chess2.png" %>
+                        <img class="pull-right" <%= image_tag "chess2.png" %> alt="" />
                         <h2>Play Anywhere Anytime with Anyone</h2>
                         <h3 class="gap">Someone wants to play Chess right now with you</h3>
-                        <a class="btn btn-large btn-transparent" href="#">Learn More</a>
                     </div>
                 </div>
             </div>
@@ -90,10 +86,9 @@
             <div class="sl-slide item3" data-orientation="horizontal" data-slice1-rotation="3" data-slice2-rotation="3" data-slice1-scale="2" data-slice2-scale="1">
                 <div class="sl-slide-inner">
                    <div class="container">
-                    <%= image_tag "chess3.png" %>
+                    <img class="pull-right" <%= image_tag "chess3.png" %> alt="" />
                     <h2>Compete or Just for Fun</h2>
                     <h3 class="gap">Choose the option that's best for you</h3>
-                    <a class="btn btn-large btn-transparent" href="#">Learn More</a>
                 </div>
             </div>
         </div>
@@ -103,10 +98,7 @@
     <!--/Slider Items-->
 
     <!--Slider Next Prev button-->
-    <nav id="nav-arrows" class="nav-arrows">
-        <span class="nav-arrow-prev"><i class="icon-angle-left"></i></span>
-        <span class="nav-arrow-next"><i class="icon-angle-right"></i></span> 
-    </nav>
+
     <!--/Slider Next Prev button-->
 
 </div>
