Added State and City

--- a/app/views/layouts/hsc.html.erb
+++ b/app/views/layouts/hsc.html.erb
@@ -18,7 +18,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </a>
-                <a id="log" class="pull-left" href="index.html"><H1>HIGH SPEED CHESS</H1></a>
+                <a id="log" class="pull-left"><H1>HIGH SPEED CHESS</H1></a>
                 <div class="nav-collapse collapse pull-right">
                     <ul class="nav">
                       <!--  <li class="active"><a href="index.html">Home</a></li>
@@ -78,7 +78,7 @@
         <div class="row-fluid">
             <div class="span9">
                 <h4>High Speed Chess, the new way to play. Click the link to search your area for your next opponent.</h4>
-                <p class="no-margin">NEED A QUOTE TO GO HERE FROM SOMEONE</p>
+                <p class="no-margin">Live vs Live, the fastest game of chess I've ever played -- O.P.</p>
             </div>
             <div class="span3">
                 <%= button_to "Play Someone", statuses_path,
