--- a/app/views/statuses/index.html.erb
+++ b/app/views/statuses/index.html.erb
@@ -12,6 +12,8 @@
         <h4 class="media-heading"><%= status.user.full_name %></h4>
         <p><%= status.content %></p>
         <%= status_document_link(status) %>
+        <p><%= status.city %></p>
+        <p><%= status.state %></p>
         <div class="meta">
             <%= link_to time_ago_in_words(status.created_at) + " ago", status %> 
             <% if signed_in? && current_user == status.user %>
