--- a/app/views/statuses/new.html.erb
+++ b/app/views/statuses/new.html.erb
@@ -1,5 +1,5 @@
 <%= page_header do %>
-  <h1>New Status Update</h1>
+  <h1>Tell Us Where You're playing and add a picture if you'd like.</h1>
 <% end %>
 
 <%= render 'form' %>
