--- a/app/views/statuses/show.html.erb
+++ b/app/views/statuses/show.html.erb
@@ -12,6 +12,17 @@
       <%= @status.content %>
     </p>
 
+
+    <p>
+      <%= @status.city %>
+    </p>
+    
+    <p>
+      <%= @status.state %>
+    </p>
+
+    
+
     <hr />
 
     <% if @status.document && @status.document.attachment? %>
