--- a/app/views/layouts/statuses.html.erb
+++ b/app/views/layouts/statuses.html.erb
@@ -16,6 +16,7 @@
 				<%= link_to "Random MeetUp", root_path, class: 'brand' %>
 				<% end %>
 				<ul class="nav">
+					<li><%= link_to "HIGH SPEED CHESS", root_path %></li>
 					<li><%= link_to "Current Players", feed_path %></li>
 					<% if user_signed_in? %>
 						<li id="activity-feed"><%= link_to "Activity Feed", activities_path %></li>
@@ -31,21 +32,18 @@
 						<li><%= link_to "Register", register_path %></li>
 						<li><%= link_to "Log in", new_user_session_path %></li>
 					<% end %>
-
 				</ul>
 			</div>
 		</div>
 	</div>
 	<div class="container">
 		<%= render_breadcrumbs %>
-		
 		<% flash.each do |type, message| %>
 			<div class="alert <%= flash_class type %>">
 				<button class="close" data-dismiss="alert">×</button>
 				<%= message %>
 			</div>
-		<% end %>
-		    
+		<% end %>	    
 		<%= yield %>
 	</div>
 </body>
