--- a/app/views/statuses/_form.html.erb
+++ b/app/views/statuses/_form.html.erb
@@ -10,8 +10,12 @@
       </ul>
     </div>
   <% end %>
-  
+  <%= f.label :"Where are you playing today." %></BR>
   <%= f.input :content, input_html: { rows: 4, class: 'input-xxlarge' } %>
+  <%= f.label :"City You're playing in" %></BR>
+  <%= f.input :city %>
+  <%= f.label :"State you're playing in" %></BR>
+  <%=f.input :state, priority: [ "NY" ], collection: [["Alabama", "AL"],["Alaska", "AK"], ["Arizona", "AZ"], ["Arkansas", "AR"], ["California", "CA"],["Colorado", "CO"],["Connecticut", "CT"],["Delaware", "DE"],["Florida", "FL"],["Georgia", "GA"],["Hawaii", "HI"],["Idaho", "ID"],["Illinois", "IL"],["Indiana", "IN"],["Iowa", "IA"],["Kansas", "KS"],["Kentucky", "KY"],["Louisiana", "LA"],["Maine", "ME"],["Maryland", "MD"],["Massachusetts", "MA"],["Michigan", "MI"],["Minnesota", "MN"],["Mississippi", "MS"],["Missouri", "MO"],["Montana", "MT"],["Nebraska", "NE"],["Nevada", "NV"],["New Hampshire", "NH"],["New Jersey", "NJ"],["New Mexico", "NM"],["New York", "NY"],["North Dakota", "ND"],["Ohio", "OH"],["Oklahoma", "OK"],["Oregon", "OR"],["Pennsylvania", "PA"],["Rhode Island", "RI"],["South Carolina", "SC"],["South Dakota", "SD"],["Tennessee", "TN"],["Texas", "TX"],["Utah", "UT"],["Vermont", "VT"],["Virginia", "VA"],["Washington", "WA"],["West Virginia", "WA"],["Wisconsin", "WI"],["Wyoming", "WY"], ], :include_blank => true %>
   <%= f.fields_for :document do |document_fields| %>
     <% if document_fields.object.attachment? %>
     <div class="control-group">
