--- a/app/views/layouts/hsc.html.erb
+++ b/app/views/layouts/hsc.html.erb
@@ -298,7 +298,7 @@
                     <div class="active item">
                         <div class="row-fluid">
                             <ul class="thumbnails">
-                                <li class="span3"><a href="#"><img src="images/sample/clients/client1.png"></a></li>
+                                <li class="span3"><%= link_to image_tag("partner1.png"), "http://www.orrinpridgen.com"%></li>
                                 <li class="span3"><a href="#"><img src="images/sample/clients/client2.png"></a></li>
                                 <li class="span3"><a href="#"><img src="images/sample/clients/client3.png"></a></li>
                                 <li class="span3"><a href="#"><img src="images/sample/clients/client4.png"></a></li>
