Added search functionality and updated pagination

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,5 +1,5 @@
 <%= page_header do %>
-  <h1>Sign Up For Random MeetUp</h1>
+  <h1>Sign Up For High Speed Chess</h1>
 <% end %>
 
 <div class="row">
@@ -24,6 +24,6 @@
     <h2>Why Sign Up?</h2>
     <p>
     <p>
-      A completely new way to randomly meet new people.</p>
+      To let others know that you're ready to play the faster game of Chess you've ever played.</p>
   </div>
 </div>
