Added Stopclock link and Google Analytics

--- a/app/views/layouts/hsc.html.erb
+++ b/app/views/layouts/hsc.html.erb
@@ -103,7 +103,7 @@
                         <i class="icon-globe icon-medium"></i>
                     </div>
                     <div class="media-body">
-                        <h4 class="media-heading">5 Seconds</h4>
+                        <h4 class="media-heading"><a href="http://www.online-stopwatch.com/full-screen-interval-timer/?c=27tlbzjds8">5 Seconds</a></h4>
                         <p>Both you and you opponent are locked into having to make split second decisons about what they need to do next. There's no time to think deeply. You have to move now or your opponent could take the lead.</p>
                     </div>
                 </div>
@@ -115,7 +115,7 @@
                         <i class="icon-thumbs-up-alt icon-medium"></i>
                     </div>
                     <div class="media-body">
-                        <h4 class="media-heading">10 seconds</h4>
+                        <h4 class="media-heading"><a href="http://www.online-stopwatch.com/full-screen-interval-timer/?c=r7dt27fpw">10 seconds</a></h4>
                         <p>Not as pressurized as 5 but you still don't have much time to contemplate the universe. You've got to decide fast about what you're going to do and do it or you could lose the game in a very short period of time</p>
                     </div>
                 </div>
@@ -127,7 +127,7 @@
                         <i class="icon-leaf icon-medium icon-rounded"></i>
                     </div>
                     <div class="media-body">
-                        <h4 class="media-heading">25 seconds</h4>
+                        <h4 class="media-heading"><a href="http://www.online-stopwatch.com/full-screen-interval-timer/?c=mffialom16">25 seconds</a></h4>
                         <p>A little more time's on the clock, you could take a quick sip of your coffee or look around at your friends but if you want to win you've got to keep your mind on the game and your eye on the prize.</p>
                     </div>
                 </div>
@@ -143,7 +143,7 @@
                         <i class="icon-shopping-cart icon-medium"></i>
                     </div>
                     <div class="media-body">
-                        <h4 class="media-heading">1 Minute</h4>
+                        <h4 class="media-heading"><a href="http://www.online-stopwatch.com/full-screen-interval-timer/?c=joq7kqfcoc">1 Minute</a></h4>
                         <p>Ok, so you want to play a little bit slower because the 5, 10 and 25 second speed games were too quick for you to handle. That's ok, not everyone can play like the pros but even this game is fast. You can stand up, yawn, drink some coffee, even text a friend but you have to make your move because if you don't before that minute's up your opponent can quickly take the lead.</p>
                     </div>
                 </div>
@@ -155,7 +155,7 @@
                         <i class="icon-globe icon-medium"></i>
                     </div>
                     <div class="media-body">
-                        <h4 class="media-heading">2 minutes</h4>
+                        <h4 class="media-heading"><a href="http://www.online-stopwatch.com/full-screen-interval-timer/?c=67whhwyfrz">2 minutes</a></h4>
                         <p>Alright, so you got some time to spend and aren't in a super rush and 2 minutes is the best way for you to play. You could grap a cup of coffee, call a friend, do some jumping jacks and blog for a moment but don't forget to make your move because your opponent is going to take the lead if you don't.</p>
                     </div>
                 </div>
@@ -167,7 +167,7 @@
                         <i class="icon-globe icon-medium"></i>
                     </div>
                     <div class="media-body">
-                        <h4 class="media-heading">5 minutes</h4>
+                        <h4 class="media-heading"><a href="http://www.online-stopwatch.com/full-screen-interval-timer/?c=9v8z2ri5z1">5 minutes</a></h4>
                         <p>Not in a super rush and you've got some time to kill, but still you can't sit around for 30 minutes to make a move. You've got enough time to think about your next move and the move after that, check out what's going on in the news and write a short poem and then make your move but watch the clock because at 5 minutes on the dot if you haven't made your move your opponent is up and you could lose out.</p>
                     </div>
                 </div>
@@ -349,11 +349,11 @@
                 <h4>ADDRESS</h4>
                 <ul class="unstyled address">
                     <li>
-                        <i class="icon-home"></i><strong>Address:</strong> 1032 Wayback Lane, Wantagh<br>NY 11793
+                        <i class="icon-home"></i><strong>Address:</strong>Rockland County<br>NY 10970
                     </li>
                     <li>
                         <i class="icon-envelope"></i>
-                        <strong>Email: </strong> support@highspeedchess.com
+                        <strong>Email: </strong> highspeedchess@gmail.com
                     </li>
                     <li>
                         <i class="icon-globe"></i>
@@ -452,7 +452,7 @@
     <div class="container">
         <div class="row-fluid">
             <div class="span5 cp">
-                &copy; 2014 <a target="_blank" href="http://shapebootstrap.net/" title="Free Twitter Bootstrap WordPress Themes and HTML templates">High Speed Chess</a>. All Rights Reserved.
+                &copy; 2014 <a target="_blank" href="http://highspeedchess.com/" title="The new way to play chess and meet cool people">High Speed Chess</a>. All Rights Reserved.
             </div>
             <!--/Copyright-->
 
@@ -542,6 +542,16 @@ $(function() {
 
     Page.init();
 });
+</script>
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-53194647-1', 'auto');
+  ga('send', 'pageview');
+
 </script>
 <!-- /SL Slider -->
 </body>
