Removed excess code

--- a/app/views/layouts/hsc.html.erb
+++ b/app/views/layouts/hsc.html.erb
@@ -299,9 +299,9 @@
                         <div class="row-fluid">
                             <ul class="thumbnails">
                                 <li class="span3"><%= link_to image_tag("partner1.png"), "http://www.orrinpridgen.com"%></li>
-                                <li class="span3"><a href="#"><img src="images/sample/clients/client2.png"></a></li>
-                                <li class="span3"><a href="#"><img src="images/sample/clients/client3.png"></a></li>
-                                <li class="span3"><a href="#"><img src="images/sample/clients/client4.png"></a></li>
+                                <li class="span3">
+                                <li class="span3"><%= link_to image_tag("lb.png"), "http://www.larsbergportfolio.com"%></li>
+                                <li class="span3">
                             </ul>
                         </div>
                     </div>
@@ -369,7 +369,7 @@
 
             <!--Important Links-->
             <div id="tweets" class="span3">
-                <h4>OUR COMPANY</h4>
+                <!--<h4>OUR COMPANY</h4>
                 <div>
                     <ul class="arrow">
                         <li><a href="#">About Us</a></li>
@@ -380,12 +380,12 @@
                         <li><a href="#">We are hiring</a></li>
                         <li><a href="#">Clients</a></li>
                         <li><a href="#">Blog</a></li>
-                    </ul>
+                    </ul>-->
                 </div>  
             </div>
             <!--Important Links-->
 
-            <!--Archives-->
+            <!--Archives--><!--
             <div id="archives" class="span3">
                 <h4>ARCHIVES</h4>
                 <div>
@@ -398,11 +398,11 @@
                         <li><a href="#">July 2012 (1)</a></li>
                         <li><a href="#">June 2012 (31)</a></li>
                     </ul>
-                </div>
+                </div>-->
             </div>
             <!--End Archives-->
 
-            <div class="span3">
+            <div class="span3"><!--
                 <h4>FLICKR GALLERY</h4>
                 <div class="row-fluid first">
                     <ul class="thumbnails">
@@ -437,7 +437,7 @@
                 </ul>
             </div>
 
-        </div>
+        </div> -->
 
     </div>
     <!--/row-fluid-->
@@ -458,7 +458,7 @@
 
             <div class="span6">
                 <ul class="social pull-right">
-                    <li><a href="#"><i class="icon-facebook"></i></a></li>
+                 <!--   <li><a href="#"><i class="icon-facebook"></i></a></li>
                     <li><a href="#"><i class="icon-twitter"></i></a></li>
                     <li><a href="#"><i class="icon-pinterest"></i></a></li>
                     <li><a href="#"><i class="icon-linkedin"></i></a></li>
@@ -468,7 +468,7 @@
                     <li><a href="#"><i class="icon-dribbble"></i></a></li>
                     <li><a href="#"><i class="icon-rss"></i></a></li>
                     <li><a href="#"><i class="icon-github-alt"></i></a></li>
-                    <li><a href="#"><i class="icon-instagram"></i></a></li>                   
+                    <li><a href="#"><i class="icon-instagram"></i></a></li>   -->                
                 </ul>
             </div>
 
