Removed some unnecessary links, added security to disable inappropriate user names, added links for how to play the game and the history of the game

--- a/app/views/layouts/hsc.html.erb
+++ b/app/views/layouts/hsc.html.erb
@@ -193,7 +193,7 @@
                     <div class="overlay">
                     </div>
                     <div class="links">
-                        <a data-toggle="modal" href="#modal-1"><i class="icon-eye-open"></i></a><a href="#"><i class="icon-link"></i></a>                          
+                        <!--<a data-toggle="modal" href="#modal-1"><i class="icon-eye-open"></i></a><a href="#"><i class="icon-link"></i></a> -->                         
                     </div>
                 </div>
                 <div class="desc">
@@ -215,7 +215,7 @@
                     <div class="overlay">
                     </div>
                     <div class="links">
-                        <a data-toggle="modal" href="#modal-1"><i class="icon-eye-open"></i></a><a href="#"><i class="icon-link"></i></a>                                
+                       <!-- <a data-toggle="modal" href="#modal-1"><i class="icon-eye-open"></i></a><a href="#"><i class="icon-link"></i></a> -->                               
                     </div>
                 </div>
                 <div class="desc">
@@ -237,7 +237,7 @@
                     <div class="overlay">
                     </div>
                     <div class="links">
-                        <a data-toggle="modal" href="#modal-3"><i class="icon-eye-open"></i></a><a href="#"><i class="icon-link"></i></a>                                
+                        <!--<a data-toggle="modal" href="#modal-3"><i class="icon-eye-open"></i></a><a href="#"><i class="icon-link"></i></a> -->                               
                     </div>
                 </div>
                 <div class="desc">
@@ -259,7 +259,7 @@
                     <div class="overlay">
                     </div>
                     <div class="links">
-                        <a data-toggle="modal" href="#modal-4"><i class="icon-eye-open"></i></a><a href="#"><i class="icon-link"></i></a>                                
+                        <!--<a data-toggle="modal" href="#modal-4"><i class="icon-eye-open"></i></a><a href="#"><i class="icon-link"></i></a> -->                               
                     </div>
                 </div>
                 <div class="desc">
@@ -369,18 +369,18 @@
 
             <!--Important Links-->
             <div id="tweets" class="span3">
-                <!--<h4>OUR COMPANY</h4>
+                <h4>HOW TO PLAY CHESS</h4>
                 <div>
                     <ul class="arrow">
-                        <li><a href="#">About Us</a></li>
-                        <li><a href="#">Support</a></li>
-                        <li><a href="#">Terms of Use</a></li>
+                        <li><a target="_blank" href="http://www.chess.com/learn-how-to-play-chess">How to Play Chess</a></li>
+                        <li><a target="_blank" href="http://en.wikipedia.org/wiki/History_of_chess">History of Chess</a></li>
+                        <!-- <li><a href="#">Terms of Use</a></li>
                         <li><a href="#">Privacy Policy</a></li>
                         <li><a href="#">Copyright</a></li>
                         <li><a href="#">We are hiring</a></li>
                         <li><a href="#">Clients</a></li>
-                        <li><a href="#">Blog</a></li>
-                    </ul>-->
+                        <li><a href="#">Blog</a></li>-->
+                    </ul>
                 </div>  
             </div>
             <!--Important Links-->
