This should work

--- a/app/views/layouts/hsc.html.erb
+++ b/app/views/layouts/hsc.html.erb
@@ -1,10 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>High Speed Chess</title>
+  <title>High Speed Chess, Play Speed Chess, Fast Chess</title>
+    
   <%= javascript_include_tag  "application", :media => "all" %>
   <%= stylesheet_link_tag    "application", :media => "all" %>
   <%= csrf_meta_tags %>
+
+  <meta name="description" content="High Speed Chess the best place to meet other people who want to play a quick game
+    of chess." />
+    <meta name="keywords" content="chess, fast, quick, meet, bullet, blitz" />
 
 </head>
 
