--- a/app/views/layouts/statuses.html.erb
+++ b/app/views/layouts/statuses.html.erb
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>High Speed Chess</title>
+  <title>High Speed Chess Meetup Statuses</title>
   <%= stylesheet_link_tag    "application", :media => "all" %>
   <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
+  <meta name="description" content="High Speed Chess, a great way to meet other people like you who want to play a live game of chess." />
+    <meta name="keywords" content="fun meet friendly game cool great awesome fantastic super meetup games" />
 </head>
 <body>
 	<div class="navbar navbar-fixed-top">
