--- a/app/views/layouts/hsc.html.erb
+++ b/app/views/layouts/hsc.html.erb
@@ -67,7 +67,7 @@
             <div class="sl-slide item1" data-orientation="horizontal" data-slice1-rotation="-25" data-slice2-rotation="-25" data-slice1-scale="2" data-slice2-scale="2">
                 <div class="sl-slide-inner">
                     <div class="container">
-                        <img class="pull-right" <%= image_tag "chess1.png" %> alt="" />
+                        <%= image_tag "chess1.png", :class =>"pull-right" %>
                         <h2>High Speed Chess</h2>
                         <h3 class="gap">The new way to play</h3>
                     </div>
@@ -79,7 +79,7 @@
             <div class="sl-slide item2" data-orientation="vertical" data-slice1-rotation="10" data-slice2-rotation="-15" data-slice1-scale="1.5" data-slice2-scale="1.5">
                 <div class="sl-slide-inner">
                     <div class="container">
-                        <img class="pull-right" <%= image_tag "chess2.png" %> alt="" />
+                        <%= image_tag "chess2.png", :class =>"pull-right" %>
                         <h2>Play Anywhere Anytime with Anyone</h2>
                         <h3 class="gap">Someone wants to play Chess right now with you</h3>
                     </div>
@@ -91,7 +91,7 @@
             <div class="sl-slide item3" data-orientation="horizontal" data-slice1-rotation="3" data-slice2-rotation="3" data-slice1-scale="2" data-slice2-scale="1">
                 <div class="sl-slide-inner">
                    <div class="container">
-                    <img class="pull-right" <%= image_tag "chess3.png" %> alt="" />
+                    <%= image_tag "chess3.png", :class =>"pull-right" %>
                     <h2>Compete or Just for Fun</h2>
                     <h3 class="gap">Choose the option that's best for you</h3>
                 </div>
