Added Multisearch functionality with Ransack and Jquery is working as well

--- a/app/views/layouts/statuses.html.erb
+++ b/app/views/layouts/statuses.html.erb
@@ -22,7 +22,7 @@
 					<li><%= link_to "Current Players", feed_path %></li>
 					<li ><%= search_form_for @search do |f| %>
   <div id="searchbox">
-    <%= f.text_field :state_cont %>
+    <%= f.text_field :state_or_city_or_content_cont %>
   </div></li>
   <li><div id="submit"><%= f.submit "Search" %></div>
 <% end %></li>
