--- a/app/views/layouts/hsc.html.erb
+++ b/app/views/layouts/hsc.html.erb
@@ -23,7 +23,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </a>
-                <a id="log" class="pull-left"><H1>HIGH SPEED CHESS</H1></a>
+                <a id="log" class="pull-left"><H1 class="high">HIGH SPEED CHESS</H1></a>
                 <div class="nav-collapse collapse pull-right">
                     <ul class="nav">
                       <!--  <li class="active"><a href="index.html">Home</a></li>
@@ -142,7 +142,7 @@
             <div class="span4">
                 <div class="media">
                     <div class="pull-left">
-                        <i class="icon-globe icon-medium"></i>
+                        <i class="fa fa-clock-o icon-medium"></i>
                     </div>
                     <div class="media-body">
                         <h4 class="media-heading"><a href="http://www.online-stopwatch.com/full-screen-interval-timer/?c=27tlbzjds8">5 Seconds</a></h4>
@@ -154,7 +154,7 @@
             <div class="span4">
                 <div class="media">
                     <div class="pull-left">
-                        <i class="icon-thumbs-up-alt icon-medium"></i>
+                        <i class="fa fa-clock-o icon-medium"></i>
                     </div>
                     <div class="media-body">
                         <h4 class="media-heading"><a href="http://www.online-stopwatch.com/full-screen-interval-timer/?c=r7dt27fpw">10 seconds</a></h4>
@@ -166,7 +166,7 @@
             <div class="span4">
                 <div class="media">
                     <div class="pull-left">
-                        <i class="icon-leaf icon-medium icon-rounded"></i>
+                        <i class="fa fa-clock-o icon-medium"></i>
                     </div>
                     <div class="media-body">
                         <h4 class="media-heading"><a href="http://www.online-stopwatch.com/full-screen-interval-timer/?c=mffialom16">25 seconds</a></h4>
@@ -177,15 +177,18 @@
         </div>
 
         <div class="gap"></div>
-
+         <div class="center gap">
+            <h3>Team Chess</h3>
+            <p class="lead">You and your team members face off in a fast paced game of High Speed Chess</p>
+        </div>
         <div class="row-fluid">
             <div class="span4">
                 <div class="media">
                     <div class="pull-left">
-                        <i class="icon-shopping-cart icon-medium"></i>
+                        <i class="fa fa-clock-o icon-medium"></i>
                     </div>
                     <div class="media-body">
-                        <h4 class="media-heading"><a href="http://www.online-stopwatch.com/full-screen-interval-timer/?c=joq7kqfcoc">1 Minute</a></h4>
+                        <h4 class="media-heading"><a href="http://www.online-stopwatch.com/full-screen-interval-timer/?c=joq7kqfcoc">5 seconds</a></h4>
                         <p>Ok, so you want to play a little bit slower because the 5, 10 and 25 second speed games were too quick for you to handle. That's ok, not everyone can play like the pros but even this game is fast. You can stand up, yawn, drink some coffee, even text a friend but you have to make your move because if you don't before that minute's up your opponent can quickly take the lead.</p>
                     </div>
                 </div>
@@ -194,10 +197,10 @@
             <div class="span4">
                 <div class="media">
                     <div class="pull-left">
-                        <i class="icon-globe icon-medium"></i>
+                        <i class="fa fa-clock-o icon-medium"></i>
                     </div>
                     <div class="media-body">
-                        <h4 class="media-heading"><a href="http://www.online-stopwatch.com/full-screen-interval-timer/?c=67whhwyfrz">2 minutes</a></h4>
+                        <h4 class="media-heading"><a href="http://www.online-stopwatch.com/full-screen-interval-timer/?c=67whhwyfrz">10 seconds</a></h4>
                         <p>Alright, so you got some time to spend and aren't in a super rush and 2 minutes is the best way for you to play. You could grap a cup of coffee, call a friend, do some jumping jacks and blog for a moment but don't forget to make your move because your opponent is going to take the lead if you don't.</p>
                     </div>
                 </div>
@@ -206,10 +209,10 @@
             <div class="span4">
                 <div class="media">
                     <div class="pull-left">
-                        <i class="icon-globe icon-medium"></i>
+                        <i class="fa fa-clock-o icon-medium"></i>
                     </div>
                     <div class="media-body">
-                        <h4 class="media-heading"><a href="http://www.online-stopwatch.com/full-screen-interval-timer/?c=9v8z2ri5z1">5 minutes</a></h4>
+                        <h4 class="media-heading"><a href="http://www.online-stopwatch.com/full-screen-interval-timer/?c=9v8z2ri5z1">25 seconds</a></h4>
                         <p>Not in a super rush and you've got some time to kill, but still you can't sit around for 30 minutes to make a move. You've got enough time to think about your next move and the move after that, check out what's going on in the news and write a short poem and then make your move but watch the clock because at 5 minutes on the dot if you haven't made your move your opponent is up and you could lose out.</p>
                     </div>
                 </div>
